# nsmd

./: .gitignore  README.md  meson.build  meson_options.txt
common/test/: common_utils_test.cpp  meson.build  mockDBusHandler.cpp  mockDBusHandler.hpp
gpu-telemetry/: meson.build  meson_options.txt
gpu-telemetry/examples/: meson.build  temperature.c
gpu-telemetry/test/: client_test.cpp  integration_test.cpp  meson.build  mock_device_test.cpp  server_test.cpp
gpu-telemetry/tools/: gpu-client.cpp  gpu-server.cpp  meson.build
libnsm/test/: common-tests.cpp  common-tests.hpp  libnsm_base_test.cpp  libnsm_debug_token_test.cpp  libnsm_device_capability_discovery_test.cpp  libnsm_device_configuration_test.cpp  libnsm_diagnostics_test.cpp  libnsm_firmware_utils_test.cpp  libnsm_network_ports_test.cpp  libnsm_pci_links_test.cpp  libnsm_platform_environmental_test.cpp  meson.build
mockupResponder/: README.md  debugToken.cpp  firmwareUtils.cpp  gpmMetricsList.hpp  meson.build  mockupResponder.cpp  mockupResponder.hpp  nsmMockupResponder.cpp
mockupResponder/test/: meson.build  mockupResponder_test.cpp
nsmd/: deviceManager.cpp  deviceManager.hpp  eventHandler.hpp  eventManager.hpp  eventType0Handler.hpp  eventType3Handler.cpp  eventType3Handler.hpp  eventTypeHandlers.cpp  eventTypeHandlers.hpp  globalPollingStateManager.hpp  instance_id.hpp  interfaceWrapper.hpp  invoker.hpp  meson.build  nsmDevice.cpp  nsmDevice.hpp  nsmEvent.cpp  nsmEvent.hpp  nsmGpuPriorityMapping.h  nsmGroupSensor.hpp  nsmInterface.hpp  nsmNumericAggregator.cpp  nsmNumericAggregator.hpp  nsmNumericSensor.cpp  nsmNumericSensor.hpp  nsmNumericSensorUtility.cpp  nsmNumericSensorUtility.hpp  nsmObject.hpp  nsmObjectFactory.cpp  nsmObjectFactory.hpp  nsmPower.cpp  nsmPower.hpp  nsmPowerAggregator.cpp  nsmPowerAggregator.hpp  nsmPriorityMapping.h  nsmSensor.cpp  nsmSensor.hpp  nsmSensorAggregator.cpp  nsmSensorAggregator.hpp  nsmServiceReadyInterface.hpp  (+11 more)
nsmd/nsmChassis/: meson.build  nsmAERError.cpp  nsmAERError.hpp  nsmChassis.cpp  nsmChassis.hpp  nsmChassisAssembly.cpp  nsmChassisAssembly.hpp  nsmChassisPCIeDevice.cpp  nsmChassisPCIeDevice.hpp  nsmChassisPCIeSlot.cpp  nsmChassisPCIeSlot.hpp  nsmClockOutputEnableState.cpp  nsmClockOutputEnableState.hpp  nsmErot.cpp  nsmErot.hpp  nsmGpuClockControl.cpp  nsmGpuClockControl.hpp  nsmGpuPresenceAndPowerStatus.cpp  nsmGpuPresenceAndPowerStatus.hpp  nsmInventoryProperty.cpp  nsmInventoryProperty.hpp  nsmIstModeEnabled.cpp  nsmIstModeEnabled.hpp  nsmNVSwitchAndNVMgmtNICChassis.cpp  nsmNVSwitchAndNVMgmtNICChassis.hpp  nsmNVSwitchAndNVMgmtNICChassisAssembly.cpp  nsmNVSwitchAndNVMgmtNICChassisAssembly.hpp  nsmPCIeDevice.cpp  nsmPCIeDevice.hpp  nsmPCIeFunction.cpp  nsmPCIeFunction.hpp  nsmPCIeLTSSMState.cpp  nsmPCIeLTSSMState.hpp  nsmPCIeLinkSpeed.cpp  nsmPCIeLinkSpeed.hpp  nsmPCIeRetimer.cpp  nsmPCIeRetimer.hpp  nsmPCIeSlot.cpp  nsmPCIeSlot.hpp  nsmPowerControl.cpp  (+13 more)
nsmd/nsmCommon/: meson.build  nsmCommon.cpp  nsmCommon.hpp  nsmErrorInjectionCommon.hpp  sharedMemCommon.cpp  sharedMemCommon.hpp
nsmd/nsmDbusIfaceOverride/: meson.build  nsmAssetIntf.cpp  nsmAssetIntf.hpp  nsmClearPowerCapIface.hpp  nsmCpuOperatingConfigInterface.hpp  nsmEccModeIface.hpp  nsmLogDumpOnDemand.hpp  nsmMNNVLinkTopologyIntf.cpp  nsmMNNVLinkTopologyIntf.hpp  nsmMigModeIface.hpp  nsmModeIntf.cpp  nsmModeIntf.hpp  nsmPowerCap.hpp  nsmPowerCapIface.hpp  nsmPowerSmoothingAdminProfileIntf.hpp  nsmPowerSmoothingCurrentProfileIface.hpp  nsmPowerSmoothingFeatureIntf.hpp  nsmPowerSmoothingPowerProfileIntf.hpp  nsmResetEdppAsyncIface.hpp  nsmResetIface.hpp  nsmWorkloadPowerProfileInfoIface.hpp  nsmWriteProtectedIntf.cpp  nsmWriteProtectedIntf.hpp
nsmd/nsmDebugToken/: meson.build  nsmDebugToken.cpp  nsmDebugToken.hpp
nsmd/nsmDeviceInventory/: meson.build  nsmNetworkAdapter.cpp  nsmNetworkAdapter.hpp  nsmPCIeRetimerFabricsDI.cpp  nsmPCIeRetimerFabricsDI.hpp  nsmPCIeRetimerSwitchDI.cpp  nsmPCIeRetimerSwitchDI.hpp  nsmSwitch.cpp  nsmSwitch.hpp
nsmd/nsmDumpCollection/: meson.build  nsmDebugInfo.cpp  nsmDebugInfo.hpp  nsmEraseTrace.cpp  nsmEraseTrace.hpp  nsmLogInfo.cpp  nsmLogInfo.hpp
nsmd/nsmEvent/: meson.build  nsmEventInfo.hpp  nsmFabricManagerStateEvent.cpp  nsmFabricManagerStateEvent.hpp  nsmLongRunningEvent.cpp  nsmLongRunningEvent.hpp  nsmLongRunningEventDispatcher.cpp  nsmLongRunningEventDispatcher.hpp  nsmLongRunningEventHandler.cpp  nsmLongRunningEventHandler.hpp  nsmRediscoveryEvent.cpp  nsmRediscoveryEvent.hpp  nsmResetRequiredEvent.cpp  nsmResetRequiredEvent.hpp  nsmThresholdEvent.cpp  nsmThresholdEvent.hpp  nsmXIDEvent.cpp  nsmXIDEvent.hpp
nsmd/nsmEventConfig/: meson.build  nsmEventConfig.cpp  nsmEventConfig.hpp  nsmEventSetting.cpp  nsmEventSetting.hpp
nsmd/nsmFirmwareUtils/: meson.build  nsmFirmwareSlot.cpp  nsmFirmwareSlot.hpp  nsmFirmwareUtilsCommon.hpp  nsmKeyMgmt.cpp  nsmKeyMgmt.hpp
nsmd/nsmFwSwInventory/: GPUSWInventory.cpp  GPUSWInventory.hpp  NVLinkManagementNICSWInventory.cpp  NVLinkManagementNICSWInventory.hpp  PCIeRetimerFWInventory.cpp  PCIeRetimerFWInventory.hpp  meson.build  nsmFirmwareInventory.cpp  nsmFirmwareInventory.hpp  nsmSoftwareSettings.cpp  nsmSoftwareSettings.hpp  nsmWriteProtectedControl.cpp  nsmWriteProtectedControl.hpp
nsmd/nsmGPM/: meson.build  nsmGpmOem.cpp  nsmGpmOem.hpp  nsmGpmOemFactory.cpp
nsmd/nsmGpuChassis/: meson.build  nsmGpuChassis.cpp  nsmGpuChassis.hpp  nsmGpuChassisAssembly.cpp  nsmGpuChassisAssembly.hpp  nsmGpuChassisPCIeDevice.cpp  nsmGpuChassisPCIeDevice.hpp  nsmGpuPresenceAndPowerStatus.cpp  nsmGpuPresenceAndPowerStatus.hpp  nsmInterface.hpp  nsmInventoryProperty.cpp  nsmInventoryProperty.hpp  nsmPCIeDevice.cpp  nsmPCIeDevice.hpp  nsmPCIeFunction.cpp  (+7 more)
nsmtool/: README.md  cmd_helper.cpp  cmd_helper.hpp  gpm_metrics_list.hpp  meson.build  nsm_base.hpp  nsm_config_cmd.cpp  nsm_config_cmd.hpp  nsm_diag_cmd.cpp  nsm_diag_cmd.hpp  nsm_discovery_cmd.cpp  nsm_discovery_cmd.hpp  nsm_firmware_cmd.cpp  nsm_firmware_cmd.hpp  nsm_passthrough_cmd.cpp  nsm_passthrough_cmd.hpp  nsm_telemetry_cmd.cpp  nsm_telemetry_cmd.hpp  nsmtool.cpp
(+265 files in other folders)
