option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option(
    'stanbyToDC',
    type: 'feature',
    description: 'Use for MAnager ready feature',
    value: 'enabled',
)
option(
    'shmem',
    type: 'feature',
    description: 'Use NVIDIA Shared-Memory IPC',
    value: 'enabled',
)
option(
    'system-guid',
    type: 'feature',
    description: 'Enable System GUID feature',
    value: 'disabled',
)
option(
    'sensor-polling-time',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of sensor polling in milliseconds',
    value: 249,
)
option(
    'gpio-name',
    type: 'string',
    value: 'GPU_BASE_PWR_GD',
    description: 'GPIO name for NSM',
)
option(
    'sensor-polling-time-long-running',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of sensor polling in milliseconds for NSM Long-running requests',
    value: 1499,
)
option(
    'rr-refresh-limit',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'Refresh limit in millseconds for round robin sensors. Round robin sensors are refreshed every `n` millseconds',
    value: 5000,
)
option(
    'mockup-responder',
    type: 'feature',
    description: 'Mockup Responder',
    value: 'enabled',
)
option(
    'instance-id-expiration-interval',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of NSM instance id expiration in seconds',
    value: 5,
)
option(
    'instance-id-expiration-interval-long-running',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of NSM instance id expiration in seconds for NSM Long-running requests. Value of response-time-out-long-running is selected as 3 seconds. With two retries, maximum possible time spent is 9 seconds. Value of 10 seconds is selected here to accommodate for latency.',
    value: 10,
)
option(
    'number-of-request-retries',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The number of NSM request retries',
    value: 2,
)
option(
    'response-time-out',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of NSM response time out in milliseconds',
    value: 2000,
)
option(
    'response-time-out-long-running',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of NSM response time out in milliseconds for NSM Long-running requests. The NSM Specification defines Long Running Request timeout as 1 second. Value of 3 seconds is selected here to accommodate for latency.',
    value: 3000,
)
option(
    'local-eid',
    type: 'integer',
    min: 1,
    max: 254,
    description: 'The default local EID',
    value: 9,
)

option(
    'aer-error-status-priority',
    type: 'boolean',
    value: false,
    description: 'Aer Error Status Sensor Priority',
)
option(
    'per-lan-error-count-priority',
    type: 'boolean',
    value: false,
    description: 'Per Lane Error Count Sensor Priority',
)
option(
    'error-injection-priority',
    type: 'boolean',
    value: false,
    description: 'Error Injection Priority',
)
