option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option(
    'stanbyToDC',
    type: 'feature',
    description: 'Use for MAnager ready feature',
    value: 'enabled',
)
option(
    'shmem',
    type: 'feature',
    description: 'Use NVIDIA Shared-Memory IPC',
    value: 'enabled',
)
option(
    'reset-metrics',
    type: 'feature',
    description: 'Enable reset metrics feature',
    value: 'disabled',
)
option(
    'system-guid',
    type: 'feature',
    description: 'Enable System GUID feature',
    value: 'disabled',
)
option(
    'sensor-polling-time',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of sensor polling in milliseconds',
    value: 150,
)
option(
    'mctp-eid0-filtering',
    type: 'boolean',
    description: 'Enable MCTP filtering',
    value: 'false',
)
option(
    'num-gpu-per-module',
    type: 'integer',
    description: 'Total number of GPU in each processor module.',
    value: 2,
)
option(
    'gpio-name',
    type: 'string',
    value: 'GPU_BASE_PWR_GD',
    description: 'GPIO name for NSM',
)
option(
    'sensor-polling-time-long-running',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of sensor polling in milliseconds for NSM Long-running requests',
    value: 10000,
)
option(
    'allowed-buffer-in-ms-for-polling',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'Max allowable deviation in milliseconds from the desired polling interval. If within buffer, skip sleeping. Helps in minimizing delay.',
    value: 5,
)
option(
    'inactive-sleep-time-in-ms',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'Time in milliseconds to sleep for if device is inactive, before starting polling again.',
    value: 1000,
)
option(
    'rr-refresh-limit',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'Refresh limit in millseconds for round robin sensors. Round robin sensors are refreshed every `n` millseconds',
    value: 30000,
)
option(
    'mockup-responder',
    type: 'feature',
    description: 'Mockup Responder',
    value: 'enabled',
)
option(
    'instance-id-expiration-interval',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of NSM instance id expiration in seconds',
    value: 5,
)
option(
    'number-of-request-retries',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The number of NSM request retries',
    value: 2,
)
option(
    'response-time-out',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of NSM response time out in milliseconds',
    value: 2000,
)
option(
    'response-time-out-long-running',
    type: 'integer',
    min: 1,
    max: 4294967295,
    description: 'The interval time of NSM response time out in milliseconds for NSM Long-running event response. The NSM Specification defines Long Running Request timeout as 1 second. Value of 3 seconds is selected here to accommodate for latency.',
    value: 3000,
)
option(
    'local-eid',
    type: 'integer',
    min: 1,
    max: 254,
    description: 'The default local EID',
    value: 254,
)

option(
    'aer-error-status-priority',
    type: 'boolean',
    value: false,
    description: 'Aer Error Status Sensor Priority',
)
option(
    'per-lan-error-count-priority',
    type: 'boolean',
    value: false,
    description: 'Per Lane Error Count Sensor Priority',
)
option(
    'error-injection-priority',
    type: 'boolean',
    value: false,
    description: 'Error Injection Priority',
)

option(
    'confidential-compute-mode',
    type: 'boolean',
    value: false,
    description: 'Confidential Compute Mode Sensor Priority',
)

option(
    'confidential-compute-devtool-mode',
    type: 'boolean',
    value: false,
    description: 'Confidential Compute Devtool Mode Sensor Priority',
)

option(
    'enable-in-kernel-mctp',
    type: 'feature',
    value: 'disabled',
    description: 'Use the in-kernel MCTP stack instead of the demux daemon',
)

option(
  'accelerator-dbus',
  type: 'feature',
  value: 'enabled',
  description: 'Expose Accelerator D-Bus Interface for Processor'
)

option(
    'delay-between-concurrent-requests',
    type: 'integer',
    value: 5000,
    min: 1,
    max: 100000,
    description: 'The minimum required interval time in microseconds between two concurrent requests' ,
)

option(
    'fixup-missing-event-notification',
    type: 'feature',
    value: 'disabled',
    description: 'This is a work around to solve an issue on Bianca where we are not getting a MCTP rediscovery event on GPU reset to setup event notifications'
)

option(
    'enable-histogram',
    type: 'feature',
    description: 'Enable histogram feature on devices',
    value: 'enabled',
)
